Added additional publication date fields
